# Potato-Disease-Classification

./: .gitignore  pyproject.toml  readme
app/: main.py
app/static/: script.js  style.css
app/templates/: index.html
models/: 1.keras
notebook/: potato-disease-classification-model-using-image-data-generator.ipynb  potato-disease-classification-model.ipynb
